[gd_scene load_steps=2 format=3 uid="uid://dx53tl2jyh3e0"]

[ext_resource type="Script" path="res://Menus/stage_complete_menu.gd" id="1_qiq62"]

[node name="StageCompleteMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qiq62")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -66.0
offset_right = 136.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Stage Complete"
horizontal_alignment = 1

[node name="Continue" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="Save" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Save
"

[node name="Exit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="Panel/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
